--- a/packages/core/__int_tests__/_data/atoms/button/button.wingsuit.yml
+++ b/packages/core/__int_tests__/_data/atoms/button/button.wingsuit.yml
@@ -1,5 +1,5 @@
-card:
-  use: "@molecules/card/_card.twig"
+button:
+  use: "@atoms/button/_button.twig"
   label: Card
   description: Example description
   extends:
