--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,6 +50,7 @@
     "ast-query": "^2.0.0",
     "babel-generator": "^6.26.1",
     "babel-traverse": "^6.26.0",
+    "glob": "^8.1.0",
     "babel-types": "^6.26.0",
     "babylon": "^6.18.0",
     "chalk": "^2.1.0",
