--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,25 @@
 version: 2.1
 
-aliases:
-  - &defaults
+executors:
+  sb_node_16_classic:
+    parameters:
+      class:
+        description: The Resource class
+        type: enum
+        enum: ['small', 'medium', 'medium+', 'large', 'xlarge']
+        default: 'small'
     working_directory: /tmp/storybook
-    CYPRESS_CACHE_FOLDER:
     docker:
-      - image: cimg/python:3.9.7-browsers
+      - image: cimg/node:16.17.1
+        environment:
+          NODE_OPTIONS: --max_old_space_size=6144
+    resource_class: <<parameters.class>>
 
 jobs:
   install:
-    <<: *defaults
+    executor:
+      class: small
+      name: sb_node_16_classic
     steps:
       - checkout
       - restore_cache:
@@ -36,7 +46,9 @@ jobs:
             - packages
             - .cache
   build:
-    <<: *defaults
+    executor:
+      class: small
+      name: sb_node_16_classic
     steps:
       - checkout
       - attach_workspace:
@@ -53,7 +65,9 @@ jobs:
             - examples
             - .cache
   packtracker:
-    <<: *defaults
+    executor:
+      class: small
+      name: sb_node_16_classic
     steps:
       - checkout
       - attach_workspace:
@@ -64,7 +78,9 @@ jobs:
             cd examples/official-wingsuit
             yarn packtracker
   examples:
-    <<: *defaults
+    executor:
+      class: small
+      name: sb_node_16_classic
     parallelism: 1
     steps:
       - checkout
@@ -79,7 +95,9 @@ jobs:
           paths:
             - built-storybooks
   publish:
-    <<: *defaults
+    executor:
+      class: small
+      name: sb_node_16_classic
     steps:
       - checkout
       - attach_workspace:
@@ -175,7 +193,9 @@ jobs:
           name: cypress run
           command: yarn test:e2e --record --key 2311d788-c8ef-458b-b009-4cd3aee65180
   chromatic:
-    <<: *defaults
+    executor:
+      class: small
+      name: sb_node_16_classic
     working_directory: /tmp/storybook
     parallelism: 4
     steps:
@@ -188,7 +208,9 @@ jobs:
             cd starter-kits/tailwind
             npx chromatic --exit-zero-on-changes
   smoke-tests:
-    <<: *defaults
+    executor:
+      class: small
+      name: sb_node_16_classic
     steps:
       - checkout
       - attach_workspace:
@@ -221,7 +243,9 @@ jobs:
             yarn build:drupal
 
   docs:
-    <<: *defaults
+    executor:
+      class: small
+      name: sb_node_16_classic
     steps:
       - checkout
       - attach_workspace:
@@ -237,7 +261,9 @@ jobs:
             cd docs
             yarn build:pages
   lint:
-    <<: *defaults
+    executor:
+      class: small
+      name: sb_node_16_classic
     steps:
       - checkout
       - attach_workspace:
@@ -246,7 +272,9 @@ jobs:
           name: Lint
           command: yarn lint
   test:
-    <<: *defaults
+    executor:
+      class: small
+      name: sb_node_16_classic
     steps:
       - checkout
       - attach_workspace:
@@ -259,7 +287,9 @@ jobs:
           paths:
             - coverage
   coverage:
-    <<: *defaults
+    executor:
+      class: small
+      name: sb_node_16_classic
     steps:
       - checkout
       - attach_workspace:
