--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,6 +47,7 @@
     "glob": "^8.1.0",
     "image-webpack-loader": "^8.0.1",
     "jest": "^27.2.4",
+    "js-yaml-loader": "^1.2.2",
     "jsondiffpatch": "^0.4.1",
     "loader-utils": "^2.0.0",
     "lodash": "^4.17.21",
@@ -57,10 +58,10 @@
     "node-polyfill-webpack-plugin": "^1.1.4",
     "path": "^0.12.7",
     "postcss": "^8.3.9",
-    "postcss-loader": "^6.2.1",
-    "postcss-nested": "^5.0.6",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-replace": "^1.1.3",
+    "postcss-loader": "^7.0.2",
+    "postcss-nested": "^6.0.0",
+    "postcss-preset-env": "^7.8.3",
+    "postcss-replace": "^2.0.0",
     "prettier": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "resolve-url-loader": "^3.1.4",
@@ -79,7 +80,6 @@
     "webpack-cli": "^4.8.0",
     "webpack-merge": "^5.8.0",
     "yaml": "^1.10.2",
-    "yaml-loader": "^0.6.0",
     "yargs": "^17.2.1"
   },
   "scripts": {
