--- a/presets/twigjs/package.json
+++ b/presets/twigjs/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@wingsuit-designsystem/preset-pages",
+  "name": "@wingsuit-designsystem/preset-twigjs",
   "version": "2.0.0-alpha.0",
-  "description": "Wingsuit Pages.",
+  "description": "Wingsuit Twig.js preset.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wingsuit-designsystem/wingsuit.git"
@@ -32,17 +32,15 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc",
+  "gitHead": "b7c8ec4097ae5cf658338c2a6c9de411793c9a58",
   "dependencies": {
     "@wingsuit-designsystem/core": "2.0.0-alpha.0",
     "@wingsuit-designsystem/pattern": "2.0.0-alpha.0",
-    "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.0",
-    "browser-sync": "^2.26.14",
-    "browser-sync-webpack-plugin": "^2.3.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "static-site-generator-webpack-plugin": "^3.4.2",
-    "yeoman-generator": "^5.3.0",
-    "webpack": "^5.56.1"
+    "add-attributes-twig-extension": "^0.1.0",
+    "twig-drupal-filters": "^3.1.0",
+    "twig-loader": "https://github.com/fourkitchens/twig-loader"
+  },
+  "devDependencies": {
+    "raw-loader": "^4.0.2"
   }
 }
