--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.wingsuit.yml
@@ -1,6 +1,6 @@
 card:
   use: "@molecules/card/card.twig"
-  label: Card222
+  label: Card
   extends:
     - rich_snippet
   icon_path: ws-assets://images/card-icon.svg
