--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -41,6 +41,7 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@storybook/addon-links": "^7.0.0-beta.31",
+    "@storybook/addon-essentials": "^7.0.0-beta.31",
     "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-viewport": "^7.0.0-beta.31",
@@ -53,9 +54,9 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.0",
+    "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.0",
     "@wingsuit-designsystem/preset-postcss8": "2.0.0-alpha.0",
     "@wingsuit-designsystem/preset-tailwind2": "2.0.0-alpha.0",
-    "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.0",
     "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.0",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.0",
     "autoprefixer": "^9.7.4",
@@ -86,6 +87,7 @@
     "yo": "^3.1.1"
   },
   "dependencies": {
+    "@parcel/css": "^1.14.0",
     "@splidejs/splide": "^2.4.21",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
