--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -44,6 +44,7 @@
     "@storybook/addon-essentials": "^7.0.0-beta.31",
     "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-docs": "^2.0.0",
     "@storybook/addon-viewport": "^7.0.0-beta.31",
     "@storybook/addons": "^7.0.0-beta.31",
     "@storybook/builder-webpack5": "^7.0.0-beta.31",
@@ -55,7 +56,6 @@
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.0",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.0",
-    "@wingsuit-designsystem/preset-postcss8": "2.0.0-alpha.0",
     "@wingsuit-designsystem/preset-tailwind2": "2.0.0-alpha.0",
     "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.0",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.0",
