--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -44,7 +44,7 @@
     "@storybook/addon-essentials": "^7.0.0-beta.31",
     "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-docs": "^2.0.0",
+    "@storybook/addon-docs": "^7.0.0-beta.31",
     "@storybook/addon-viewport": "^7.0.0-beta.31",
     "@storybook/addons": "^7.0.0-beta.31",
     "@storybook/builder-webpack5": "^7.0.0-beta.31",
