--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -23,12 +23,11 @@
     "prototyping"
   ],
   "scripts": {
-    "dev:storybook": "cross-env-shell NODE_ENV=development \"storybook dev --config-dir apps/storybook\"",
-    "build:storybook": "build-storybook build --config-dir apps/storybook -o ./dist/app-storybook",
+    "dev:storybook": "yarn ws dev storybook",
+    "build:storybook": "yarn ws build storybook",
     "docs:storybook": "storybook build --docs --config-dir apps/storybook -o ./dist/app-storybook",
-    "build-storybook": "storybook build --config-dir apps/storybook",
-    "dev:drupal": "cross-env-shell NODE_ENV=development \"webpack --watch --config ./apps/drupal/webpack.config.js\"",
-    "build:drupal": "cross-env-shell NODE_ENV=production \"webpack  --config ./apps/drupal/webpack.config.js\"",
+    "dev:drupal": "yarn ws dev drupal",
+    "build:drupal": "yarn ws build drupal",
     "lint:js": "eslint --ext .js ./",
     "lint:css": "stylelint '**/*.css'",
     "lint": "npm run lint:js; npm run lint:css;",
@@ -59,6 +58,7 @@
     "@wingsuit-designsystem/preset-tailwind2": "2.0.0-alpha.0",
     "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.0",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.0",
+    "@wingsuit-designsystem/preset-placeholder": "2.0.0-alpha.0",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
