--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -53,9 +53,12 @@
     "@storybook/react-webpack5": "^7.0.0-alpha.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@wingsuit-designsystem/core": "2.0.0-alpha.0",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.0",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.0",
     "@wingsuit-designsystem/preset-tailwind2": "2.0.0-alpha.0",
+    "@wingsuit-designsystem/preset-icon": "2.0.0-alpha.0",
+    "@wingsuit-designsystem/preset-icon-spritemap": "2.0.0-alpha.0",
     "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.0",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.0",
     "@wingsuit-designsystem/preset-placeholder": "2.0.0-alpha.0",
