--- a/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
@@ -1,7 +1,9 @@
-alertxxx:
+alert:
   use: "@atoms/alert/alert.twig"
   label: Alert
   description: Colorful status, warning and error messages for every situation.
+  dependencies:
+    - icon
   fields:
     header:
       type: text
