fix: Rename icon lib name

--- a/presets/icon-spritemap/patterns/icon-spritemap.wingsuit.yml
+++ b/presets/icon-spritemap/patterns/icon-spritemap.wingsuit.yml
@@ -1,5 +1,5 @@
 icon_spritemap:
-  use: "@ws-icon-spritemap/icon.twig"
+  use: "@ws-icon-spritemap/spritemap.twig"
   label: Icon
   extends:
     - icon_lib
