fix: configs setup.

--- a/presets/icon-spritemap/patterns/icon-spritemap.wingsuit.yml
+++ b/presets/icon-spritemap/patterns/icon-spritemap.wingsuit.yml
@@ -2,7 +2,7 @@ icon_spritemap:
   use: "@ws-icon-spritemap/spritemap.twig"
   label: Icon
   extends:
-    - icon_lib
+    - icon
   description: Flexible SVG spritemap Icon component.
   settings:
     scale:
