refactor(footer): add footer 2.0

--- a/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.wingsuit.yml
@@ -56,4 +56,5 @@ container:
       default: 'max-w-8xl'
     bg:
       teal-medium: 'dark bg-teal-500'
+      teal-dark: 'dark bg-teal-800'
       gray-light: 'bg-gray-300'
