--- a/starter-kits/tailwind/source/default/patterns/02-molecules/accordion-item/accordion-item.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/accordion-item/accordion-item.wingsuit.yml
@@ -19,3 +19,6 @@ accordion_item:
     id:
       type: token
       label: Id
+  configuration:
+    button_styles: 'foo'
+    content_styles: 'bar'
