fix(WS): Accordion, Avatar, hero and header.

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.wingsuit.yml
@@ -2,30 +2,27 @@ avatar:
   use: "@molecules/avatar/avatar.twig"
   label: Avatar
   icon_path: ws-assets://images/avatar-icon.svg
-  allow_variant_expose: true
   description: "An avatar represent a user, and displays the profile picture."
   fields:
-    text:
-      type: text
-      label: Text
-      description: A short description of the avatar.
-      preview:
-        faker: lorem.paragraph
     full_name:
       type: text
       label: Full name
       description: The full name of the profile.
-      preview:
-        faker: name.findName
+      preview: Maxine Musterlady
+    title:
+      type: text
+      label: Title
+      description: A short description of the avatar.
+      preview: Operations
     button:
       type: pattern
       label: Button
       description: Button with link to profile detail page.
       preview:
         id: button
-        variant: default
+        variant: outline
         settings:
-          expanded: true
+          size: small
   settings:
     image:
       type: media_library
@@ -38,26 +35,3 @@ avatar:
         variant: image
         settings:
           style: responsive_1_1_400w
-    text_align:
-      type: select
-      label: Text align
-      description: Align the text of the avatar.
-      options:
-        left: Left
-        center: Center
-
-  variants:
-    default:
-      label: Default
-      description: Show
-    horizontal:
-      label: Horizontal
-      settings:
-        image:
-          id: placeholder
-          variant: background
-          definition:
-            view_mode: background
-          settings:
-            style: responsive_1_3_200w
-
