--- a/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
@@ -5,6 +5,8 @@ hero:
   description: Hero section component, for all your presentation needs.
   extends:
     - rich_snippet.fields
+  dependencies:
+    - grid
   fields:
     image:
       type: pattern
