--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -2,6 +2,8 @@ menu:
   use: "@molecules/menu/menu.twig"
   label: Menu
   description: Primary and footer menu component.
+  dependencies:
+    - icon
   fields:
     items:
       type: object
