--- a/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
@@ -51,6 +51,10 @@ grid:
     vertical_center:
       type: boolean
       label: Vertical Center
+    reverse:
+      type: boolean
+      label: Reverse
+      group: tab_cells
 
   configuration:
     columns:
